--- a/api/package.json
+++ b/api/package.json
@@ -2,9 +2,11 @@
   "name": "nodejs-restapi-mongo",
   "version": "1.0.0",
   "description": "Example Project on how to build and develop REST API with NodeJS and MongoDB",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "dev": "nodemon -L ./server.js localhost 3080",
+    "server": "nodemon -L ./server.js localhost 3080",
+    "client": "npm start --prefix C:/Users/Nick/Documents/GitHub/mern-stack-example/ui",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "ENVIRONMENT=$ENVIRONMENT webpack",
     "prod-build": "ENVIRONMENT='production' gulp"
@@ -28,6 +30,7 @@
     "pine": "^1.1.1"
   },
   "devDependencies": {
+    "concurrently": "^5.3.0",
     "del": "^6.0.0",
     "fancy-log": "^2.0.0",
     "gulp": "^4.0.2",
